feat: prepare mrustc

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,20 +1,29 @@
 FROM debian:trixie
 
-# Install necessary packages
+# Install build tools & cc65
 RUN apt-get update && apt-get install -y \
     build-essential \
+    zlib1g-dev \
     curl \
     git \
     ca-certificates \
     wget \
     vim \
+    sudo \
+    unzip \
     cc65
 
-# Create non-root user
-RUN useradd -m -s /bin/bash vscode
+# Install Rust
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+
+# Compile & Install mrustc
+COPY mrustc/mrustc-master.zip /tmp
+RUN <<EOF
+unzip /tmp/mrustc-master.zip -d /opt/mrustc
+cd /opt/mrustc/mrustc-master
+make -f minicargo.mk LIBS
+ln -s /opt/mrustc/mrustc-master/bin/mrustc /usr/local/bin/mrustc
+EOF
 
 # Set working directory
 WORKDIR /workspace
-
-# Switch to non-root user
-USER vscode
