feat: write own libcore

--- a/rust-hello-nes/Makefile
+++ b/rust-hello-nes/Makefile
@@ -1,5 +1,5 @@
-hello_world.nes: hello_world.c
-	cl65 -t nes -o hello_world.nes hello_world.c
+.PHONY: output/main.nes
+output/main.nes:
+	CC=../mrustc-master/cl65-wrapper ../mrustc-master/bin/minicargo --output-dir output ./main
+	cp output/main output/main.nes
 
-hello_world.c: hello_world.rs
-	mrustc -L /opt/mrustc/mrustc-master/output -o hello_world hello_world.rs || true
