fix: remove pre-building mrustc

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,14 +16,14 @@ RUN apt-get update && apt-get install -y \
 # Install Rust
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 
-# Compile & Install mrustc
-COPY mrustc/mrustc-master.zip /tmp
-RUN <<EOF
-unzip /tmp/mrustc-master.zip -d /opt/mrustc
-cd /opt/mrustc/mrustc-master
-make -f minicargo.mk LIBS
-ln -s /opt/mrustc/mrustc-master/bin/mrustc /usr/local/bin/mrustc
-EOF
+# # Compile & Install mrustc
+# COPY mrustc/mrustc-master.zip /tmp
+# RUN <<EOF
+# unzip /tmp/mrustc-master.zip -d /opt/mrustc
+# cd /opt/mrustc/mrustc-master
+# make -f minicargo.mk LIBS
+# ln -s /opt/mrustc/mrustc-master/bin/mrustc /usr/local/bin/mrustc
+# EOF
 
 # Set working directory
 WORKDIR /workspace
