--- a/rust-hello-nes/test/Makefile
+++ b/rust-hello-nes/test/Makefile
@@ -5,8 +5,8 @@ all:
 	../../cc65/cc65-2.19/bin/cl65 ./src.c -t nes -o c.nes > build-log.txt 2>&1
 	../../cc65/cc65-2.19/bin/cl65 ./src.c -Wl --gc-sections -t nes -o c_gc.nes > gc-build-log.txt 2>&1
 	../../cc65/cc65-2.19/bin/cl65 -S ./src.c
-	da65 c.nes > c.s
-	da65 c_gc.nes > c_gc.s
+	../../da65nes c.nes > c.s
+	../../da65nes c_gc.nes > c_gc.s
 
 	sed -i 's/L..../Lxxxx/g' c.s
 	sed -i 's/L..../Lxxxx/g' c_gc.s
